--- a/app/articles/articles.css
+++ b/app/articles/articles.css
@@ -4,9 +4,14 @@ body {
 }
 
 .article-card {
+  @apply relative;
+
   display: flex;
   flex-direction: column;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+  background-size: cover;
+  background-position: center;
 }
 
 .article-card:hover {
@@ -60,4 +65,34 @@ body {
     transform: translateY(0);
     animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap");
+
+.balloon-text {
+  font-family: "Bubblegum Sans", cursive;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+    filter: blur(0px);
+  }
+  50% {
+    transform: translateY(-20px);
+    filter: blur(1px);
+  }
+  100% {
+    transform: translateY(0px);
+    filter: blur(0px);
+  }
+}
+
+.floating {
+  animation: float 6s ease-in-out infinite;
+}
+
+.letter {
+  display: inline-block;
 }
